# otter-emu

./: .gitignore  Cargo.toml  README.md
include/otter/: Makefile
res/assembler/: Makefile
res/gui/: gtk.ui  gtk_main.ui
res/programs/leds/: leds.dump
res/programs/test/all/: dump
res/programs/test/mem/: dump  test_mem.s
res/programs/test/mem1/: bin  mem1.s
res/programs/test/mem2/: bin  dump  mem2.s
src/: app.rs  bitwise.rs  cli.rs  decode.rs  emu.rs  file_io.rs  gtkapp.rs  gui.rs  main.rs  mcu.rs  mem.rs  otter.rs  rf.rs  rv32i.rs  rv32i_ir.rs  util.rs
src/app/: gtk.rs
src/otter/: mcu.rs  mod.rs
src/otter/devices/: mem.rs  mod.rs
src/otter/rv32i/: bitwise.rs  decode.rs  mod.rs
