[package]
name = "otter-emu"
version = "0.1.0"
authors = ["Trevor McKay <trmckay@calpoly.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
clap = "3.0.0-beta.2"

[[bin]]
name = "oemu"
path = "src/main.rs"
