[package]
name = "otter-emu"
version = "0.1.0"
authors = ["Trevor McKay <trmckay@calpoly.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
clap = "3.0.0-beta.2"
glib = "0.10.3"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[[bin]]
name = "oemu"
path = "src/main.rs"
